--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,9 @@
         <mat-expansion-panel-header collapsedHeight="100%">
           <mat-panel-title class="guitar-title">{{ guitar.brand + " " + guitar.model }}</mat-panel-title>
         </mat-expansion-panel-header>
-        <mat-list-item *ngFor="let field of guitarTileFields">
-          {{guitarSchema[field].options.alias}}: {{guitar[field]}}
-        </mat-list-item>
+        <div *ngFor="let field of guitarTileFields">
+            {{guitarSchema[field].options.alias}}: <span *ngIf="field=='price'">$</span>{{guitar[field]}}
+        </div>
         <button mat-raised-button color='primary' (click)="onDelete(guitar._id)">Delete Guitar</button>
       </mat-expansion-panel>
     </mat-grid-tile>
