--- a/src/app/new-guitar-form/new-guitar-form.component.html
+++ b/src/app/new-guitar-form/new-guitar-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="guitarFormGroup">
+<form *ngIf="guitarSchema" [formGroup]="guitarFormGroup">
   <mat-form-field appearance="fill">
     <mat-label>{{guitarSchema.brand.options.alias}}</mat-label>
     <input matInput type="text" formControlName='brand'/>
